syntax = "proto3";

package prefab.authz_test;
option go_package = "github.com/dpup/prefab/plugins/authz/authztest";

import "google/api/annotations.proto";
import "plugins/authz/authz.proto";

service AuthzTestService {

  rpc NoPolicy(Request) returns (Response) {
    option (google.api.http) = {
      get: "/api/no-policy"
    };
  }


  // Demonstrated an action only endpoint with no target resource.
  rpc Self(Request) returns (Response) {
    option (prefab.authz.action) = "self.inspect";
    option (google.api.http) = {
      get: "/api/self"
    };
  }

  // Demonstrates a standard deny Authz. All users are denied by default, and a
  // policy can be used to allow certain roles to view the document.
  rpc GetDocument(GetDocumentRequest) returns (GetDocumentResponse) {
    option (prefab.authz.action) = "documents.view";
    option (prefab.authz.resource) = "document";
    option (prefab.authz.default_effect) = "deny";
    
    option (google.api.http) = {
      get: "/api/{org_id}/docs/{document_id}"
    };
  }

  // Another standard deny Authz, but with a different action.
  rpc SaveDocument(SaveDocumentRequest) returns (SaveDocumentResponse) {
    option (prefab.authz.action) = "documents.write";
    option (prefab.authz.resource) = "document";
    option (prefab.authz.default_effect) = "deny";
    
    option (google.api.http) = {
      put: "/api/{org_id}/docs/{document_id}"
    };
  }

  // Demonstrates a default allow Authz. Policies can be used to restrict certain
  // roles from viewing the title.
  rpc GetDocumentTitle(GetDocumentRequest) returns (GetDocumentResponse) {
    option (prefab.authz.action) = "documents.view_meta";
    option (prefab.authz.resource) = "document";
    option (prefab.authz.default_effect) = "allow";
    
    option (google.api.http) = {
      get: "/api/{org_id}/docs/{document_id}/title"
    };
  }

  rpc ListDocuments(ListDocumentsRequest) returns (ListDocumentsResponse) {
    option (prefab.authz.action) = "documents.list";
    option (prefab.authz.resource) = "org";
    
    option (google.api.http) = {
      get: "/api/{org_id}/docs"
    };
  }
}

message Request {
  string field = 1;
}

message Response {
  bool success = 1;
}

message GetDocumentRequest {
  string org_id = 1 [(prefab.authz.domain) = true];
  string document_id = 2 [(prefab.authz.id) = true];
}

message GetDocumentResponse {
  string id = 1;
  string title = 2;
  string body = 3;
}

message SaveDocumentRequest {
  string org_id = 1 [(prefab.authz.domain) = true];
  string document_id = 2 [(prefab.authz.id) = true];
  string title = 3;
  string body = 4;
}

message SaveDocumentResponse {
  string id = 1;
  string title = 2;
  string body = 3;
}

message ListDocumentsRequest {
  string org_id = 1 [(prefab.authz.id) = true];
}

message ListDocumentsResponse {
  repeated string document_ids = 1;
}
